[package]
name = "hushed_panic"
version = "0.1.0"
edition = "2018"
authors = ["Patrik Buhring <patrikbuhring@gmail.com>"]
description = "Hush panic!s for a single thread."
readme = "./readme.md"
repository = "https://github.com/OptimisticPeach/hushed_panic"
license = "MIT OR Apache-2.0"
keywords = ["test", "panic"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
parking_lot = "0.11.1"
